--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">FAC052-CAR_COMPRAS</string>
+    <string name="app_name">Carrinho mobile</string>
 </resources>
